--- a/react-example.html
+++ b/react-example.html
@@ -15,6 +15,7 @@
         return <h1>Hello World!</h1>;
       }
       ReactDOM.render(<Hello />, document.getElementById('mydiv'))
+      // test Arnold
     </script>
   </body>
   
